--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.andrearodriguez.androidchat.LoginActivity"
+    tools:context=".login.LoginActivity"
     android:id="@+id/layoutMainContainer">
 
     <android.support.design.widget.TextInputLayout
@@ -62,7 +62,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/loging.button.signup"
-            android:id="@+id/signIn" />
+            android:id="@+id/signInUp" />
     </LinearLayout>
     <ProgressBar
         android:layout_width="wrap_content"
