Hicimos el Presenter, el interactor y el repository del Loging. Se creo la actividad ContactList y se implemento la interface Logng View dentro del LogingActivity

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -62,9 +62,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/loging.button.signup"
-            android:id="@+id/signInUp" />
+            android:id="@+id/btnSignInUp" />
     </LinearLayout>
     <ProgressBar
+        android:id="@+id/progressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone"
