--- a/app/src/main/res/layout/content_contacts.xml
+++ b/app/src/main/res/layout/content_contacts.xml
@@ -10,7 +10,7 @@
         android:layout_height="@dimen/contact_image_size"
         android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:src="@mipmap/ic_launcher"
-        app:civ_border_color="#FF0000"
+        app:civ_border_color="@color/colorPrimaryDark"
         app:civ_border_width="1dp" />
 
     <TextView
