--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -61,7 +61,7 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/loging.button.signup"
+            android:text="@string/loging.button.gotosignup"
             android:id="@+id/btnSignInUp" />
     </LinearLayout>
     <ProgressBar
