--- a/app/src/main/res/layout/content_chat.xml
+++ b/app/src/main/res/layout/content_chat.xml
@@ -7,7 +7,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:padding="5dp"
-    android:textColor="@android:color/black"
+    android:textColor="@android:color/white"
     android:background="@color/colorPrimary"
     android:layout_gravity="left"
     android:textAppearance="?android:attr/textAppearanceMedium"/>
